Update Java code to java21 using openrewrite